--- a/excalidraw-app/index.html
+++ b/excalidraw-app/index.html
@@ -138,6 +138,13 @@
       type="font/woff2"
       crossorigin="anonymous"
     />
+    <link
+      rel="preload"
+      href="fonts/Muyao-Softbrush.ttf"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
 
     <link rel="stylesheet" href="/fonts/fonts.css" type="text/css" />
     <% if (typeof VITE_APP_DEV_DISABLE_LIVE_RELOAD != 'undefined' &&
